egui_commonmark_macros/tests/fail/commonmark_str_not_found.stderr
error: Could not find markdown file
 --> tests/fail/commonmark_str_not_found.rs:8:41
  |
8 |         commonmark_str!(ui, &mut cache, "foo.md");
  |                                         ^^^^^^^^
